# ChangeLog for www-apps/tt-rss
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Dec 2008; Patrick Nagel (padde) <mail@patrick-nagel.net>
  +tt-rss-1.2.30.ebuild, +files/postinstall-en.txt, +metadata.xml:
  New Ebuild for bug 250607
