@@ -1,5 +1,5 @@
 AUX postinstall-en.txt 58 RMD160 b457795efe41cee2f36bbe6fa37a3eb983a9af62 SHA1 2c62f7e3e26d20fe29e12360638c767c6472caf7 SHA256 7c524c14d391c76d72b22c947b68d20321bd98de3f892b1e044c3de6c281de59
 DIST tt-rss-1.2.30.tar.gz 687642 RMD160 a69e123302096587bdfb99e5379eadefcadaf4ea SHA1 776bb19f30faa02263d8e0ccbfd54b1c1f47cfb9 SHA256 58c93de237b696b87decb1ff0fdf0f11ef98f3153e9109f48d7241d6543ac4d2
 EBUILD tt-rss-1.2.30.ebuild 1405 RMD160 59d6605dd9bbe6062dd11b7040d0c2411c54673f SHA1 344eabc1bf62eab8d4589d9ecca2bf98a4ffeb6c SHA256 2a6eccd443da148cb744a94d9c860bb9a87a63d647ce1ba9ad951807db3c3939
-MISC ChangeLog 274 RMD160 6a06a6b2206f5acb340b02c3ee6eaa5c25839a49 SHA1 9a1db72f69f4190306229e192a7471f62d26058b SHA256 5a515edcc8662f578cf92656cebb3be8b3e5ec7676c25d312d23863fa4e239a0
-MISC metadata.xml 227 RMD160 c3d4a897d5dcaaa9c12c4aaa63e82461ea16985b SHA1 eedb67b2b577b7f1f77ac159584a8dcd92fdb2db SHA256 7b889d36e13c415c01120a0b2638240453ae308718f1a557b6ae1daac2706b1c
+MISC ChangeLog 363 RMD160 7b745e4cbef42797db8cc3f971c37d4fc575a19f SHA1 1aeba29c4fe072eee0a99ab3ef75f8966df469a1 SHA256 416e12bb59c11a39176e2437dabf4caad40d5ec539645d9af84a4537a13245f7
+MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
